[gd_scene load_steps=3 format=3 uid="uid://cacmlvjd22f63"]

[ext_resource type="Script" path="res://scenes/APIClient/ClientWrappers/submit_folklore.gd" id="1_caejs"]
[ext_resource type="PackedScene" uid="uid://choqn8khbb7rw" path="res://scenes/APIClient/api_client.tscn" id="1_ofmv6"]

[node name="SubmitFolklore" type="Node"]
script = ExtResource("1_caejs")

[node name="APIClient" parent="." instance=ExtResource("1_ofmv6")]
api_url = "https://0ys0761ple.execute-api.us-east-1.amazonaws.com/prod/submit-folklore"
api_key_file = "res://API_KEY_SECRET.txt"

[connection signal="request_failed" from="APIClient" to="." method="_on_api_client_request_failed"]
[connection signal="response_received" from="APIClient" to="." method="_on_api_client_response_received"]
